fix: layout issues

--- a/src/components/ClassPool.css
+++ b/src/components/ClassPool.css
@@ -7,7 +7,7 @@
 
 @media screen and (min-width: 769px) {
     .text-plane-1 {
-        padding: 16px 10%;
+        padding: 16px 2% 16px 10%;
     }
 
     .text-plane-2 {
