--- a/src/components/Label.css
+++ b/src/components/Label.css
@@ -8,13 +8,13 @@
 }
 
 @media screen and (min-width: 769px) {
-    .content-title {
+    .content__label {
         font-size: 24px;
         line-height: 24px;
     }
 }
 @media screen and (max-width: 768px) {
-    .content-title {
+    .content__label {
         font-size: 15px;
         line-height: 15px;
     }
